--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -5,8 +5,12 @@
   justify-content: center;
   height: calc(100vh);
   background-color: black;
+  /* background-image: url("../images/homeheaderbg.svg"); */
   background-image: url("../images/homerightblurred.svg");
   gap: 20px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .homeheaderleft {
@@ -64,4 +68,219 @@
   font-weight: 500;
   text-align: center;
   margin-top: 20px;
+}
+.buttonrow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.homeheadermain button {
+  padding: 12px 20px 8px 20px;
+  border-radius: 5px;
+  width: 200px;
+  transition: all 0.3s ease;
+  line-height: 1;
+}
+
+.homeheadermain button:hover {
+  transform: translateY(-2px);
+  scale: 1.05;
+}
+.homeheadermain .buttonrow button:first-child {
+  background-color: #ffff;
+}
+.homeheadermain .buttonrow button:last-child {
+  background-color: #072b43;
+  color: #ffff;
+}
+.homebodywhyusbg {
+  background-color: #ffffff;
+}
+.homebodywhyus {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  gap: 20px;
+  padding: 40px;
+  max-width: 1400px;
+  margin: 0 auto;
+  width: calc(100% - 40px);
+}
+.homebodywhyusleft {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  width: 60%;
+}
+
+.homebodywhyusright {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  width: 40%;
+}
+.homebodywhyusright img {
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+  border-radius: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border: 1px solid #aaa;
+}
+.homeheadertext {
+  text-align: center;
+  font-size: 65px;
+  font-weight: 600;
+  color: #072b43;
+}
+.homebodywhyusleft ul {
+  list-style-type: disc;
+  font-size: 20px;
+}
+.homebodywhyusleft ul li {
+  margin-bottom: 5px;
+}
+.hometestiomonailsbg {
+  background-color: #f6f4f4;
+}
+.hometestiomonials {
+  padding: 40px;
+  max-width: 1400px;
+  margin: 0 auto;
+  width: calc(100% - 40px);
+}
+.testimonialsrow {
+  display: flex;
+  width: 100%;
+  max-width: 1400px;
+
+  gap: 20px;
+  flex-shrink: 0;
+  overflow-x: scroll;
+}
+.testimonialcard {
+  border: 1px solid #ddd;
+  padding: 14px;
+  border-radius: 5px;
+  background-color: #ffff;
+  min-width: 310px;
+  display: flex;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+}
+.testimonialcardbottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 8px;
+}
+.testimonialcardbottom h4 {
+  font-size: 20px;
+  font-weight: 600;
+  color: #072b43;
+}
+.testimonialcardrating {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffda40;
+  gap: 2px;
+}
+.homeourservices {
+  padding: 40px;
+  max-width: 1400px;
+  margin: 0 auto;
+  width: calc(100% - 40px);
+}
+.servicecardrow {
+  display: flex;
+  align-items: stretch;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  width: 100%;
+}
+.servicecard {
+  width: calc(33.333% - 20px);
+  border: 1px solid #ddd;
+  padding: 30px 14px 20px;
+  display: flex;
+  min-width: 300px;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #f5e8d7;
+}
+.servicecard h2 {
+  font-size: 32px;
+  font-weight: 600;
+  color: #072b43;
+  text-align: center;
+}
+.servicecard ul {
+  list-style-type: disc;
+  font-size: 16px;
+  margin-left: 10px;
+
+  margin-bottom: 10px;
+}
+.servicecard ul li {
+  margin-bottom: 5px;
+  text-decoration: underline;
+  cursor: pointer;
+}
+.servicecard button {
+  width: 100%;
+  background-color: #f6f4f4;
+  padding: 10px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 1000px) {
+  .homeheadermain h1 {
+    font-size: 50px;
+    line-height: 55px;
+  }
+  .homeheadermain p {
+    font-size: 14px;
+  }
+  .homeheadermain .buttonrow {
+    flex-direction: column;
+  }
+  .homebodywhyus {
+    flex-direction: column;
+  }
+  .homebodywhyusleft,
+  .homebodywhyusright {
+    width: 100%;
+  }
+  .homebodywhyusleft ul {
+    font-size: 14px;
+  }
+  .homeheadertext {
+    font-size: 40px;
+  }
+  .homebodywhyusright img {
+    max-height: 300px;
+  }
+  .homebodywhyus {
+    padding-inline: 20px;
+  }
+  .homeheadermain {
+    padding-inline: 20px;
+  }
+  .hometestiomonials {
+    width: 100%;
+  }
 }
