--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -51,3 +51,139 @@
   display: flex;
   align-items: center;
 }
+.dropdown {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #ffffff;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.dropdown ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.dropdown ul li {
+  font-size: 24px;
+
+  color: #000000;
+  margin: 20px 0;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.dropdown ul li:hover {
+  color: #555;
+  scale: 1.05;
+}
+
+@keyframes dropdownOpen {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes dropdownClose {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+}
+.navbarrightmobile {
+  display: none;
+}
+
+.dropdown {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #f5e8d7;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+.dropdown.open {
+  animation-name: dropdownOpen;
+}
+
+.dropdown.close {
+  animation-name: dropdownClose;
+}
+
+.dropdown button {
+  background-color: #000000;
+  color: #ffffff;
+  border-radius: 5px;
+  border: none;
+  padding: 10px 20px;
+  font-size: 18px;
+}
+.dropdown {
+  display: none;
+}
+.dropdowntop {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0px;
+  padding: 10px 20px;
+  height: 80px;
+  border-bottom: 1px solid #333333;
+}
+.dropdowntopleft {
+  display: flex;
+  font-size: 24px;
+  height: 40px;
+  width: 40px;
+  justify-content: center;
+  font-weight: 700;
+  gap: 2px;
+  align-items: center;
+}
+.dropdowntopleft img {
+  height: 40px;
+  width: 40px;
+}
+@media screen and (max-width: 1000px) {
+  .navbarright {
+    display: none;
+  }
+  .navbarrightmobile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .dropdown {
+    display: flex;
+  }
+  .navbar {
+    padding: 10px 20px 10px 20px;
+  }
+}
