--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,13 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+.contactusbutton {
+  background-color: #072b43;
+  color: #fff;
+  padding: 12px 25px 8px 25px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 20px;
+}
