--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -51,15 +51,6 @@
   color: #072b43;
   margin: 0;
 }
-
-@media screen and (max-width: 1300px) {
-  .aboutmainheaderleft h1 {
-    font-size: 100px;
-  }
-  .aboutmainheaderright p {
-    font-size: 20px;
-  }
-}
 .aboutmainbody {
   padding: 100px;
   display: flex;
@@ -98,7 +89,87 @@
   object-fit: cover;
   margin-top: 40px;
 }
+.aboutourservices {
+  padding: 40px;
+  max-width: 1400px;
+  margin: 0 auto;
+  width: calc(100% - 40px);
+}
+.aboutservicesrow {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 30px;
+}
+.aboutservicecard {
+  display: flex;
+  position: relative;
+  background-color: #ffff;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+  padding: 40px 20px 30px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  min-width: 300px;
+  flex-direction: column;
+  width: calc(30% - 40px);
+}
+.aboutservicecardcontent h4 {
+  font-size: 20px;
+  font-weight: 600;
+  color: #072b43;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.aboutservicecardicon {
+  border-radius: 50%;
+  background-color: #f5e8d7;
+  position: absolute;
+  top: -30px;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+@media screen and (max-width: 1300px) {
+  .aboutmainheaderleft h1 {
+    font-size: 100px;
+  }
+  .aboutmainheaderright p {
+    font-size: 20px;
+  }
+}
+
+.aboutourmission {
+  padding: 100px;
+  display: flex;
+  justify-content: center;
+  height: 90svh;
+
+  flex-direction: column;
+  max-width: 1400px;
+  margin: 0 auto;
+  background-image: url("../images/ourmission.svg");
+  background-size: 70vh;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.aboutourmission h1 {
+  color: #072b43;
+  font-size: 200px;
+}
+.aboutourmission p {
+  font-size: 26px;
+  font-weight: 400;
+  color: #072b43;
+  margin: 0;
+  font-style: italic;
+}
 @media screen and (max-width: 1300px) {
   .aboutmainheader {
     padding: 50px 30px;
@@ -123,6 +194,9 @@
   .aboutmainheaderright p {
     font-size: 16px;
   }
+  .aboutourmission h1 {
+    font-size: 100px;
+  }
 }
 
 @media screen and (max-width: 1000px) {
@@ -143,5 +217,18 @@
     padding-top: 0px;
     align-items: center;
     font-size: 16px;
+  }
+  .aboutourmission {
+    padding: 20px;
+  }
+  .aboutourmission h1 {
+    font-size: 50px;
+  }
+  .aboutourmission p {
+    font-size: 16px;
+  }
+  .aboutservicecard {
+    width: calc(100%);
+    max-width: 350px;
   }
 }
