--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -128,12 +128,17 @@
   border-radius: 50%;
   background-color: #f5e8d7;
   position: absolute;
+
   top: -30px;
   width: 60px;
   height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.aboutservicecardicon svg {
+  height: 25px;
+  width: 25px;
 }
 
 @media screen and (max-width: 1300px) {
