--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -52,6 +52,42 @@
   display: flex;
   align-items: center;
 }
+.navbarright ul li {
+  padding: 10px 0px;
+  position: relative;
+}
+
+.navbarright ul .dropdown-menu {
+  display: none;
+  position: absolute;
+  top: calc(100%);
+  left: -50%;
+  background-color: #f5e8d7;
+  border: 1px solid #bbbb;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  list-style-type: none;
+  padding: 10px 0;
+  margin: 0;
+  min-width: 250px;
+  z-index: 1000;
+}
+
+.navbarright ul .dropdown-menu li {
+  padding: 8px 16px;
+  cursor: pointer;
+
+  font-size: 14px;
+  transition: all 0.3s ease;
+}
+
+.navbarright ul .dropdown-menu li:hover {
+  background-color: #072b43;
+  color: #fff;
+}
+
+.navbarright ul li:hover .dropdown-menu {
+  display: block;
+}
 .dropdown {
   position: fixed;
   top: 0;
