--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,11 @@
   src: url("./fonts/FKScreamer.otf");
 }
 html {
+  background-color: #f5e8d7;
   scroll-behavior: smooth;
+}
+body {
+  background-color: #ffffff;
 }
 * {
   margin: 0;
