--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -77,6 +77,9 @@
   cursor: pointer;
   margin-top: 20px;
 }
+.footertopcenter .submenu {
+  margin-bottom: 10px;
+}
 .footertopcenter .submenu li {
   font-size: 14px !important;
   margin: 3px 0px !important;
