--- a/src/styles/taxadvisory.css
+++ b/src/styles/taxadvisory.css
@@ -3,6 +3,34 @@
   clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
   padding-bottom: 60px;
 }
+.workpermitheaderbg {
+  background-color: #21272d;
+  clip-path: polygon(
+    0% 0%,
+    100% 0%,
+    100% 100%,
+    92.857% 90%,
+    85.714% 100%,
+    78.571% 90%,
+    71.429% 100%,
+    64.286% 90%,
+    57.143% 100%,
+    50% 90%,
+    42.857% 100%,
+    35.714% 90%,
+    28.571% 100%,
+    21.429% 90%,
+    14.286% 100%,
+    7.143% 90%,
+    0% 100%
+  );
+  padding-bottom: 60px;
+}
+.immigrationheaderbg {
+  background-color: #072b43;
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
+  padding-bottom: 60px;
+}
 .taxadvisoryheader {
   display: flex;
   align-items: center;
@@ -79,7 +107,22 @@
 @media screen and (max-width: 1000px) {
   .taxadvisoryheader {
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
+  }
+  .workpermitheaderbg {
+    background-color: #21272d;
+    clip-path: polygon(
+      0% 0%,
+      100% 0%,
+      100% 100%,
+      83.33% 90%,
+      66.66% 100%,
+      50% 90%,
+      33.33% 100%,
+      16.66% 90%,
+      0% 100%
+    );
+    padding-bottom: 60px;
   }
   .taxadvisoryheaderleft {
     width: 100%;
@@ -93,5 +136,8 @@
   }
   .taxadvisoryheaderbg {
     clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
+  }
+  .taxadvisorybody h1 {
+    font-size: 32px;
   }
 }
