--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -174,6 +174,7 @@
   background-color: #ffff;
   min-width: 310px;
   display: flex;
+  justify-content: space-between;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   flex-direction: column;
 }
@@ -296,5 +297,4 @@
   .hometestiomonials {
     width: 100%;
   }
-  
 }
