--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -88,6 +88,17 @@
   height: 12px;
   width: 12px;
 }
+.socialrow {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  margin-top: 20px;
+}
+.socialrow svg {
+  height: 20px;
+  width: 20px;
+}
 @media screen and (max-width: 1000px) {
   .footertop {
     flex-direction: column;
